<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_habits"
            android:icon="@drawable/ic_habits"
            android:title="@string/nav_habits" />
        
        <item
            android:id="@+id/nav_mood"
            android:icon="@drawable/ic_mood"
            android:title="@string/nav_mood" />
        
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
    
    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>